packages/svelte/tests/compiler-errors/samples/dollar-binding-declaration-legacy/main.svelte
<svelte:options runes={false} />

<script>
	function ok($) {}
	function ok2() {
		let $;
	}

	// error
	let $;
</script>
